Producer configured to work with UserSecrets

--- a/src/AzureServiceBusDemo.Consumer/AzureServiceBusDemo.Consumer.csproj
+++ b/src/AzureServiceBusDemo.Consumer/AzureServiceBusDemo.Consumer.csproj
@@ -1,13 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>dotnet-AzureServiceBusDemo.Consumer-F463F3E3-914A-43BD-A6F8-B60CA9CBC117</UserSecretsId>
+    <UserSecretsId>AzureServiceBusDemo</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="4.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
   </ItemGroup>
