--- a/src/AzureServiceBusDemo.Consumer/AzureServiceBusDemo.Consumer.csproj
+++ b/src/AzureServiceBusDemo.Consumer/AzureServiceBusDemo.Consumer.csproj
@@ -9,7 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="4.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AzureServiceBusDemo.Shared\AzureServiceBusDemo.Shared.csproj" />
   </ItemGroup>
 </Project>
