--- a/src/AzureServiceBusDemo.Producer/AzureServiceBusDemo.Producer.csproj
+++ b/src/AzureServiceBusDemo.Producer/AzureServiceBusDemo.Producer.csproj
@@ -8,7 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.EventHubs" Version="4.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AzureServiceBusDemo.Shared\AzureServiceBusDemo.Shared.csproj" />
   </ItemGroup>
 
 </Project>
