Fizz Buzz Pop in Azure with Kafka

--- a/src/AzureServiceBusDemo.Consumer/AzureServiceBusDemo.Consumer.csproj
+++ b/src/AzureServiceBusDemo.Consumer/AzureServiceBusDemo.Consumer.csproj
@@ -16,5 +16,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AzureServiceBusDemo.Shared\AzureServiceBusDemo.Shared.csproj" />
+    <ProjectReference Include="..\FizzBuzzPop.Domain\FizzBuzzPop.Domain.csproj" />
   </ItemGroup>
 </Project>
